online-single/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: online-svc
spec:
  selector:
    app: online-nginx
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
